--- a/devops-operators-subcharts/stackrox/Chart.yaml
+++ b/devops-operators-subcharts/stackrox/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: devops-operators
+name: stackrox
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -24,10 +24,6 @@ version: 0.1.0
 appVersion: "1.16.0"
 
 dependencies:
-  - name: sealed-secrets
-    version: "2.1.6"
-    repository: https://bitnami-labs.github.io/sealed-secrets
-    condition: sealed-secrets.enabled
   - name: stackrox-chart
     version: "0.0.6"
     repository: https://redhat-cop.github.io/helm-charts
