--- a/devops-operators-subcharts/openshift-pipelines/templates/subscription.yaml
+++ b/devops-operators-subcharts/openshift-pipelines/templates/subscription.yaml
@@ -1,18 +1,16 @@
-{{ if eq ($value.enabled | toString) "true" }}
----
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: {{ $key | quote }}
-  namespace: {{ $value.namespace | quote }}
+  name: {{ .Values.name | quote }}
+  namespace: {{ .Values.namespace | quote }}
 spec:
-  channel: {{ $value.subscription.channel }} 
-  installPlanApproval: {{ $value.subscription.approval | default "Automatic" | quote }}
-  name: {{ $value.subscription.operatorName | quote }}
-  source: {{ $value.subscription.sourceName | default "redhat-operators" | quote }}
-  sourceNamespace: {{ $value.subscription.sourceNamespace | default "openshift-marketplace" | quote }}
-{{- if $value.subscription.csv }}
-  startingCSV: {{ $value.subscription.csv }}
+  channel: {{ .Values.subscription.channel }} 
+  installPlanApproval: {{ .Values.subscription.approval | default "Automatic" | quote }}
+  name: {{ .Values.subscription.operatorName | quote }}
+  source: {{ .Values.subscription.sourceName | default "redhat-operators" | quote }}
+  sourceNamespace: {{ .Values.subscription.sourceNamespace | default "openshift-marketplace" | quote }}
+{{- if .Values.subscription.csv }}
+  startingCSV: {{ .Values.subscription.csv }}
 {{- end }}
-{{- end }}
+
 
