desabled operatorgroup creation

--- a/devops-operators-subcharts/openshift-pipelines/values.yaml
+++ b/devops-operators-subcharts/openshift-pipelines/values.yaml
@@ -8,4 +8,4 @@ subscription:
   sourceName: redhat-operators
   sourceNamespace: openshift-marketplace
 operatorgroup:
-  create: true
+  create: false
