--- a/devops-operators-subcharts/strimzi/Chart.yaml
+++ b/devops-operators-subcharts/strimzi/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: cluster-logging-operator
+name: strimzi-operator
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
